--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -163,11 +163,27 @@ nav a:visited {
   padding: 1rem;
 }
 
+/* ------ Inventory styles -----------*/
+#inv-display {
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+grid-column-gap: 1rem;
+}
+
+#inv-display li {
+list-style-type: none;
+border: 1px solid #000000;
+border-radius: 10px;
+text-align: center;
+min-height: 300px;
+}
+
 /* ------ Footer styles -----------*/
 footer {
   margin: 0 2rem;
   margin-top: 2.5rem;
 }
+
 
 
 /* ------ MEDIA QUERIES -----------*/
@@ -254,5 +270,6 @@ footer {
   padding: 1rem 0;
   font-size: 18px;
 }
+
 
 }
