--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+main {
+  margin: 0 1rem;
+}
+
 body{
   background-image: none;
 }
@@ -117,7 +121,7 @@ nav a:visited {
 
 .upgrade-review {
   display: grid;
-  margin: 1rem 2rem;
+  margin: 1rem .5rem;
   grid-template-rows: .5fr 1fr;
   grid-gap: 0px;
 }
@@ -178,6 +182,32 @@ text-align: center;
 min-height: 300px;
 }
 
+/* ------ Inventory DETAILS styles -----------*/
+
+#vehicle-details {
+  display: grid;
+  grid-template-rows: .5fr 1fr;
+  min-height: 470px;
+}
+
+#vehicle-details img {
+  width: 100%;
+}
+
+#vehicle-details span {
+  font-weight: bold;
+}
+
+#vehicle-details p {
+  margin: 1rem 0;
+  padding: .5rem 0;
+}
+
+#vehicle-details .background {
+  background-color: #d4d4d46c;
+}
+
+
 /* ------ Footer styles -----------*/
 footer {
   margin: 0 2rem;
@@ -185,9 +215,13 @@ footer {
 }
 
 
+/* ------ MEDIA QUERIES LARGE-----------*/
+@media screen and (min-width: 800px) {
+  main {
+    max-width: 900px;
+    margin: 0 2rem;
+  }
 
-/* ------ MEDIA QUERIES -----------*/
-@media screen and (min-width: 500px) {
   body{
     background-image: url('/images/site/small_check.jpg');
   }
@@ -222,7 +256,7 @@ footer {
   }
 
   .hero {
-    margin: 1rem 2rem;
+    margin: 1rem .5rem;
   }
 
   .hero h2 {
@@ -271,5 +305,16 @@ footer {
   font-size: 18px;
 }
 
+/* ------ Inventory DETAILS styles -----------*/
+
+#vehicle-details {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: none;
+}
+
+#vehicle-details img {
+  width: 400px;
+}
 
 }
