--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,14 @@
 <div>
     <section class="hero">
         <h2>Welcome to CSE Motors!</h2>
-        <div>
+        <%- messages() %>
+        <section class="hero-details">
             <h3>DMC Delorean</h3>
             <p>3 Cup holders</p>
             <p>Superman doors</p>
             <p>3 Cup holders</p>
             <button>Own Today</button>
-        </div>
+        </section>
     </section>
     <div class="upgrade-review">
         <section class="upgrade">
