--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -16,7 +16,7 @@
 
 <div id="registerBox">
     <p>All fields are required</p>
-    <form id="registerForm" action="/account/register-user" method="post">
+    <form id="registerForm" action="/account/register" method="post">
         <p>
             <label for="firstname">First Name: </label>
             <input type="text" name="account_firstname" id="firstname" value="<%= locals.account_firstname %>" required>
