--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -15,7 +15,7 @@
   <% } %>
 
   <div id="classificationBox">
-    <form id="classificationForm" action="/inv/send-classification" method="post">
+    <form id="classificationForm" action="/inv/add-classification" method="post">
         <div>
             <p>        
                 <i style="font-size: 12px;">ALL FIELDS ARE REQUIRED.</i>
