--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -6,7 +6,7 @@
 
 <%# messages() %>
 
-<div>
+<div id="management-view">
     <ul>
         <li><a href="/inv/add-classification">Add New Classification</a></li>
         <li><a href="">Add New Vehicle</a></li>
