--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -18,11 +18,11 @@
     <form id="classificationForm" action="/inv/add-classification" method="post">
         <div>
             <p>        
-                <i style="font-size: 12px;">ALL FIELDS ARE REQUIRED.</i>
+                <i style="font-size: 12px;">FIELD IS REQUIRED.</i>
             </p>
             <p>
                 <label for="classification_name">Classification Name: </label>
-                <input type="text" name="classification_name" id="classification_name" pattern="[a-zA-Z0-9]+" title="Name must be alphanumeric characters only" value="<%= locals.classification_name %>" required>
+                <input type="text" name="classification_name" id="classification_name" pattern="[a-zA-Z]+" title="Name must be alphanumeric characters only" value="<%= locals.classification_name %>" required>
             </p>
             <p>        
                 <i style="font-size: 12px;">NAME MUST BE ALPHABETIC CHARACTERS ONLY.</i>
