--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -4,6 +4,16 @@
       res.redirect('/')
 } %>
 
+<%- messages() %>
+
+<% if (errors) { %>
+    <ul class="notice">
+   <% errors.array().forEach(error => { %>
+     <li><%= error.msg %></li>
+  <%  }) %>
+   </ul>
+  <% } %>
+
 <div id="inventoryBox">
     <p>All fields are required</p>
     <form id="inventoryForm" action="/inv/add-inventory" method="post">
