--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -18,43 +18,43 @@
     <p>All fields are required</p>
     <form id="inventoryForm" action="/inv/add-inventory" method="post">
         <p>
-            <label for="classification">Classification: </label>
+            <label for="classification_id">Classification: </label>
             <%- locals.dropdown %>
         </p>        
         <p>
-            <label for="make">Make: </label>
+            <label for="inv_make">Make: </label>
             <input placeholder="Min of 3 characters" type="text" name="inv_make" id="inv_make" value="<%= locals.inv_make %>" required>
         </p>        
         <p>
-            <label for="model">Model: </label>
+            <label for="inv_model">Model: </label>
             <input placeholder="Min of 3 characters" type="text" name="inv_model" id="inv_model" value="<%= locals.inv_model %>" required>
         </p>  
         <p>
-            <label for="description">Description: </label>
+            <label for="inv_description">Description: </label>
             <textarea name="inv_description" id="inv_description" required><%= locals.inv_description %></textarea>
         </p>  
         <p>
-            <label for="image">Image Path: </label>
+            <label for="inv_image">Image Path: </label>
             <input type="text" name="inv_image" placeholder="/images/vehicles/no-image.png" id="inv_image" value="/images/vehicles/no-image.png" required>
         </p>  
         <p>
-            <label for="thumbnail">Thumbnail Path: </label>
+            <label for="inv_thumbnail">Thumbnail Path: </label>
             <input type="text" name="inv_thumbnail" placeholder="/images/vehicles/no-image.png" id="inv_thumbnail" value="/images/vehicles/no-image.png" required>
         </p> 
         <p>
-            <label for="price">Price: </label>
+            <label for="inv_price">Price: </label>
             <input type="number" placeholder="Decimal or Integer" name="inv_price" id="inv_price" value="<%= locals.inv_price %>" required>
         </p>  
         <p>
-            <label for="year">Year: </label>
+            <label for="inv_year">Year: </label>
             <input type="number" placeholder="4-digit year" name="inv_year" id="inv_year" value="<%= locals.inv_year %>" required>
         </p>  
         <p>
-            <label for="miles">Miles: </label>
+            <label for="inv_miles">Miles: </label>
             <input type="number" name="inv_miles" placeholder="digit only" id="inv_miles" value="<%= locals.inv_miles %>" required>
         </p>  
         <p>
-            <label for="color">Color: </label>
+            <label for="inv_color">Color: </label>
             <input type="text" name="inv_color" id="inv_color" value="<%= locals.inv_color %>" required>
         </p>   
         <button type="submit">Add Vehicle</button>
