--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -19,5 +19,11 @@
         <li><a href="/inv/add-classification">Add New Classification</a></li>
         <li><a href="/inv/add-inventory">Add New Vehicle</a></li>
     </ul>
+    <h2>Manage Inventory</h2>
+    <p>Select a classification</p>
+    <%- classificationSelect %>
+    <table id="inventoryDisplay"></table>
+    <noscript>JavaScript must be enabled to use this page.</noscript>
 </div>
 
+<script src="../../js/inventory.js"></script>
