--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -16,4 +16,14 @@
 
 <div>
     <h1>You're logged in</h1>
+    <h2>Welcome <%= locals.accountData.account_firstname %> </h2>
+    <% if (locals.accountData.account_type === "Employee" || locals.accountData.account_type === "Admin") { %>
+        <h3>Account Information Management</h3>
+        <p><a title="Update Account Information" href="/account/edit/<%= locals.accountData.account_id %>">Update Account Information</a></p>
+        <h3>Inventory Management</h3>
+        <p><a title="Inventory Management" href="/inv">Manage Inventory</a></p>
+    <% } else { %>
+        <h3>Account Information Management</h3>
+        <p><a title="Update Account Information" href="/account/edit/<%= locals.accountData.account_id %>">Update Account Information</a></p>
+    <% } %>
 </div>
