Created the view and controller but the model seems to have issues

--- a/views/account/edit-account.ejs
+++ b/views/account/edit-account.ejs
@@ -47,6 +47,7 @@
         <% if(locals.account_id) { %> value="<%= locals.account_id %>"
         <% } %>>
     </form>
+    <p><a title="Delete Account" href="/account/delete/<%= locals.account_id %>">Delete Account</a></p>
 </div>
 
 <script src="../../js/inv-update.js"></script>
